# ColorBot

./: .gitignore  .gitmodules  CMakeLists.txt  bot.cpp  bot.h  main.cpp  rgb.cpp  rgb.h  utils.cpp  utils.h
commands/: about.cpp  about.h  color.cpp  color.h  command.cpp  command.h  help.cpp  help.h  hextoimage.cpp  hextoimage.h
